First attempt of generated API and Impl